# project-aurelia

./: .gitignore  README.md  all_requirements.txt  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  simple_architecture_diagram.py
NOTEBOOK/: chunking.ipynb  chunking_with_langchain.ipynb  docling_parser.ipynb  docling_parser_final.ipynb
app/: .dockerignore  Dockerfile  README.md  check_dependencies.py  docker-compose.yml  requirements.txt  start_rag.py
app/backend/: .dockerignore  CONVERSATION_PERSISTENCE.md  DEPENDENCY_ANALYSIS.md  Dockerfile  docker-compose.yml  main.py  requirements.txt  test_conversation_flow.py
app/backend/config/: rag_config.py
app/backend/migrations/: create_conversation_tables.py
app/backend/models/: __init__.py  conversation.py  instructor_models.py  rag_models.py  user.py
app/backend/routers/: auth.py  conversations.py  rag.py
app/backend/services/: cache_service.py  chatgpt_service.py  context_manager.py  conversation_service.py  (+16 more)
app/redis-service/: Dockerfile  redis.conf
app/streamlit/: app.py  chat_ui.py  home.py
dags/: README.md  config.py  rag_pipeline_dag.py  seed_dag.py  validator.py
dags/utils/: pdf_parser.py  text_chunker.py  vector_embedder.py
eval/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  eval_config.py  evaluate.py  evaluate_remote.py  evaluation_models.py  evaluation_service.py  ground_truth.json  requirements.txt  test_evaluation.py
pipelines/: docli_parsing.py  embedding.py  pymupdf_parser.py
pipelines/processing/: hybrid_chunking.py
src/api/: main.py
streamlit/: app.py
(+2 files in other folders)
