[project]
name = "project-aurelia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "apache-airflow>=3.0.6",
    "docling>=2.57.0",
    "fastapi>=0.119.0",
    "ipywidgets>=8.1.7",
    "langchain>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "nbformat>=4.2.0",
    "openai>=2.6.0",
    "pdfplumber>=0.11.7",
    "pinecone>=7.3.0",
    "pip>=25.2",
    "plotly>=6.3.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "tiktoken>=0.12.0",
    "tomli>=2.3.0",
    "uvicorn>=0.37.0",
    "wikipedia>=1.4.0",
    "pymupdf>=1.23.0"
]
